--- a/USGA.htm
+++ b/USGA.htm
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -10,4 +11,11 @@
   gtag('config', 'G-70KZD44TPT');
 </script>
 </head>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
 </html>
+
