--- a/index.htm
+++ b/index.htm
@@ -2,13 +2,13 @@
 <html>
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CKJX2F0Z05"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KV2K6Q57B9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-CKJX2F0Z05');
+  gtag('config', 'G-KV2K6Q57B9');
 </script>
 </head>
 <body>
