--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KV2K6Q57B9"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-70KZD44TPT"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-KV2K6Q57B9');
+  gtag('config', 'G-70KZD44TPT');
 </script>
 </head>
 <body>
