--- a/Tableau.html
+++ b/Tableau.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
- <meta charset="utf-8">
-  <title>Embedded Analytics with Tableau</title>
-  
-</head>
-<body>
-  <div id="vizContainer"></div>
-  <script src="https://us-east-1.online.tableau.com/javascripts/api/tableau-2.min.js"></script>
-  <script>
-    var viz
-    function initViz() {
-      var containerDiv = document.getElementById("vizContainer"),
-      url = "https://us-east-1.online.tableau.com/t/zuar/views/Regional/GlobalTemperatures";
+    <title>Basic Embed Test</title>
 
-      viz = new tableau.Viz(containerDiv, url);
-    }
-    initViz();
-  </script>
-</head>
-<body>
+    <script type="text/javascript"
+	    src="https://tst-daotableau.partners.org/javascripts/api/tableau-2.min.js"></script>
+    <script type="text/javascript">
+        function initViz() {
+            var containerDiv = document.getElementById("vizContainer"),
+                url = "https://tst-daotableau.partners.org/#/views/UXTeamGATest/ScoreSurveyDashboard",
+                options = {
+                    hideTabs: true,
+                    onFirstInteractive: function () {
+                        console.log("Run this code when the viz has finished loading.");
+                    }
+                };
 
+            var viz = new tableau.Viz(containerDiv, url, options);
+            // Create a viz object and embed it in the container div.
+        }
+    </script>
+</head>
+
+<body onload="initViz();">
+    <div id="vizContainer" style="width:800px; height:700px;"></div>
 </body>
+
 </html>
