--- a/Tableau.html
+++ b/Tableau.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
         function initViz() {
             var containerDiv = document.getElementById("vizContainer"),
-                url = "https://tst-daotableau.partners.org/#/views/UXTeamGATest/ScoreSurveyDashboard",
+                url = "https://tst-daotableau.partners.org/views/UXTeamGATest/ScoreSurveyDashboard",
                 options = {
                     hideTabs: true,
                     onFirstInteractive: function () {
