--- a/Tableau.html
+++ b/Tableau.html
@@ -5,7 +5,7 @@
     <title>Basic Embed Test</title>
 
     <script type="text/javascript"
-	    src="https://tst-daotableau.partners.org/javascripts/api/tableau-2.min.js"></script>
+	    src="https://tst-daotableau.partners.org/javascripts/api/tableau-2.8.0.min.js"></script>
     <script type="text/javascript">
         function initViz() {
             var containerDiv = document.getElementById("vizContainer"),
