--- a/Tableau.html
+++ b/Tableau.html
@@ -12,6 +12,8 @@
                 url = "https://tst-daotableau.partners.org/views/UXTeamGATest/ScoreSurveyDashboard",
                 options = {
                     hideTabs: true,
+		    "Entity": "MGH",
+		    "Provider Type": "Physician",
                     onFirstInteractive: function () {
                         console.log("Run this code when the viz has finished loading.");
                     }
