--- a/Resize.htm
+++ b/Resize.htm
@@ -157,7 +157,7 @@ function fn(){
 			<tr>
 				<td id="myTd" style="text-align:center;padding:0px">
 					<a id="myLink" target="_top" href="">
-						<img src='' id="myImage" alt="Click to open image in new window"/>
+						<img src='' id="myImage" alt="User Profile Image unable to load at this time"/>
 					</a>
 				</td>
 			</tr>
